# supply_chain_insight

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  screenshot.mjs
.github/workflows/: ci.yml
app/: audit.py  config.py  log_config.py  main.py  metrics.py  mlflow_registry.py  rbac.py  seed.py  settings.py
app/api/: routes.py
app/capacity/: models.py
app/db/: models.py
app/forecasting/: contracts.py  data_generator.py  drift_monitor.py  evaluation.py  feature_store.py  hierarchy.py  models.py
app/pipeline/: etl.py  ml_engine.py  orchestrator.py  stats.py  supply_chain.py
app/sensing/: signals.py
app/services/: pipeline_service.py
app/ws/: manager.py  routes.py
data_quality/: great_expectations.yml  validate.py
data_quality/checkpoints/: daily_validation.yml
data_quality/expectations/: demand_data.json  inventory_data.json
frontend/: Dockerfile  nginx.conf  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx
helm/chaininsight/: Chart.yaml  values.yaml
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml
k8s/canary/: canary.yaml  destinationrule.yaml  virtualservice.yaml
loadtests/: k6_api.js  slo.yaml
mlflow/: docker-compose.mlflow.yaml
monitoring/: alert_rules.yml  docker-compose.monitoring.yaml  prometheus.yml
pipelines/: docker-compose.airflow.yaml
pipelines/dags/: chaininsight_monitoring.py  (+1 more)
serving/: bentofile.yaml  service.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_api_security.py  test_config.py  test_etl.py  test_evaluation.py  test_forecasting_models.py  test_hierarchy.py  test_ml_leakage.py  test_orchestrator.py  test_property_based.py
(+31 files in other folders)
